# chatter

src/: CMakeLists.txt  client.cpp  env.hpp  server.cpp
src/client/: CMakeLists.txt
src/client/controllers/: CMakeLists.txt  Controller.cpp  Controller.hpp
src/client/models/: CMakeLists.txt  Storage.cpp  Storage.hpp  Subject.cpp  Subject.hpp  TCPClient.cpp  TCPClient.hpp
src/client/views/: CMakeLists.txt  Observer.hpp  View.cpp  View.hpp
src/server/: CMakeLists.txt  tcpserver.cpp  tcpserver.hpp  tcpsocket.cpp  tcpsocket.hpp
src/tests/: CMakeLists.txt  chatter.cpp
